# Zuno

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  deps.cmake  main.cpp  sample.lua  test.lua
.github/workflows/: build-and-test.yml
Zuno/: CMakeLists.txt
engine/: CMakeLists.txt  ZunoEngine.h  deps.cmake
engine/core/: Log.cpp  Log.h
engine/event/: Event.h
engine/input/: Key.h  MouseButton.h
engine/src/core/: Log.cpp  Log.h
engine/src/modules/scripting/: ScriptEngine.cpp  ScriptEngine.h
engine/src/modules/window/: Window.cpp
engine/window/: Window.cpp  Window.h
include/: ZunoEngine.h
sample/: entity_script.lua  sample.lua
src/: BaseGame.cpp  BaseGame.h  Engine.cpp  Engine.h  Graphics.cpp  Graphics.h  Key.h  Run.h  Window.cpp  Window.h  ZunoApp.cpp  ZunoApp.h  main.cpp
src/Core/: Keycode.h
src/Engine/: Event.h  Window.cpp  Window.h
src/Graphics/: Graphics.cpp  Graphics.h  ImageData.cpp  ImageData.h  Rect.cpp  Rect.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h
src/Input/: Key.h  MouseButton.h
src/Utils/: Log.h
src/core/: Log.cpp  Log.h  ZunoPCH.h
src/engine/: CMakeLists.txt  ZunoEngine.h  deps.cmake
src/engine/core/: ZunoPCH.h
src/engine/event/: Event.h
src/engine/input/: MouseButton.h
src/engine/window/: Window.cpp
src/modules/event/: Event.h
src/modules/scene/: Components.h  Entity.h  Scene.cpp  Scene.h
src/modules/scripting/: ScriptEngine.cpp  ScriptEngine.h
src/modules/window/: Window.cpp  Window.h
src/scripting/: ScriptEngine.cpp  ScriptEngine.h
tests/: CMakeLists.txt  test.lua  test_log.cpp  test_scripting.cpp  test_window.cpp
